// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildHintRequest > builds hints before anything has been said 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "THE CONVERSATION
Nothing has been said yet.",
        },
      ],
      "role": "user",
    },
  ],
  "generationConfig": {
    "responseMimeType": "application/json",
    "responseSchema": {
      "properties": {
        "hints": {
          "items": {
            "properties": {
              "text": {
                "description": "A full sentence the learner could say next, in the Target Language.",
                "type": "STRING",
              },
              "translation": {
                "description": "The sentence, translated into the Native Language.",
                "type": "STRING",
              },
            },
            "required": [
              "text",
              "translation",
            ],
            "type": "OBJECT",
          },
          "maxItems": 3,
          "minItems": 2,
          "type": "ARRAY",
        },
      },
      "required": [
        "hints",
      ],
      "type": "OBJECT",
    },
  },
  "systemInstruction": {
    "parts": [
      {
        "text": "WHO YOU ARE
You help a learner who speaks Mandarin Chinese and is learning German by living in a small town in Germany. Their level is about CEFR B2.
They are a customer at Café Stern, talking to the barista, and they have asked for help with what to say next.

THE SITUATION
The barista's goal: Take the customer's order.
What the barista knows:
- Café Stern is open 08:00–18:00, closed on Sundays.
- On the menu: Latte macchiato, 4,50 € (menu id "latte").
- On the menu: Filterkaffee, 3,80 € (menu id "coffee").
- On the menu: Schwarztee, 3 € (menu id "tea").
- On the menu: Butterbrezel, 6 € (menu id "pastry").
- On the menu: Käsekuchen, 7,20 € (menu id "cake").
- On the menu: Heiße Schokolade, 6 € (menu id "special-drink").
- Card and cash are both fine.
- The toilet is at the back.
- There is free Wi-Fi.
- At the counter tipping is optional; people often round up.
- Cash is still common, and some cafés only take card above a few euros.

WHAT TO WRITE
- hints: 2 or 3 different things the learner could say next, each a full sentence in German that moves the conversation on from where it is now. Write them as the learner, the customer, would say them: never the staff member's lines.
- Keep each sentence natural, polite and short enough to say aloud at their level. Use only what the situation offers.
- translation: each sentence in natural Mandarin Chinese.
Write the sentences only in German, and the translations only in Mandarin Chinese.",
      },
    ],
  },
}
`;

exports[`buildHintRequest > builds hints for the moment in a conversation 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "THE CONVERSATION
The conversation so far:
1. NPC: いらっしゃいませ！ご注文はお決まりですか？
2. PLAYER (typed): ラテ
3. NPC: ホットラテですね。450円です。よろしいですか？",
        },
      ],
      "role": "user",
    },
  ],
  "generationConfig": {
    "responseMimeType": "application/json",
    "responseSchema": {
      "properties": {
        "hints": {
          "items": {
            "properties": {
              "text": {
                "description": "A full sentence the learner could say next, in the Target Language.",
                "type": "STRING",
              },
              "translation": {
                "description": "The sentence, translated into the Native Language.",
                "type": "STRING",
              },
            },
            "required": [
              "text",
              "translation",
            ],
            "type": "OBJECT",
          },
          "maxItems": 3,
          "minItems": 2,
          "type": "ARRAY",
        },
      },
      "required": [
        "hints",
      ],
      "type": "OBJECT",
    },
  },
  "systemInstruction": {
    "parts": [
      {
        "text": "WHO YOU ARE
You help a learner who speaks British English and is learning Japanese by living in a small town in Japan. Their level is about CEFR A1.
They are a customer at ほしコーヒー, talking to the barista, and they have asked for help with what to say next.

THE SITUATION
The barista's goal: Take the customer's order.
What the barista knows:
- ほしコーヒー is open 07:00–20:00.
- On the menu: ホットラテ, ¥450 (menu id "latte").
- On the menu: ブレンドコーヒー, ¥380 (menu id "coffee").
- On the menu: 紅茶, ¥300 (menu id "tea").
- On the menu: メロンパン, ¥600 (menu id "pastry").
- On the menu: いちごのショートケーキ, ¥720 (menu id "cake").
- On the menu: クリームソーダ, ¥600 (menu id "special-drink").
- Cash, card and IC cards are all fine.
- The toilet is at the back.
- There is free Wi-Fi.
- Tipping is not done, and staff will politely turn a tip down.
- Customers put their money on the small tray by the till rather than in the hand.

WHAT TO WRITE
- hints: 2 or 3 different things the learner could say next, each a full sentence in Japanese that moves the conversation on from where it is now. Write them as the learner, the customer, would say them: never the staff member's lines.
- Keep each sentence natural, polite and short enough to say aloud at their level. Use only what the situation offers.
- translation: each sentence in natural British English.
Write the sentences only in Japanese, and the translations only in British English.",
      },
    ],
  },
}
`;

exports[`buildHintRequest at a Shift > builds a cashier’s hints at the till: about the bag, the points card and the change, never the customer’s wishes 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "THE CONVERSATION
The conversation so far:
1. NPC: こんにちは。",
        },
      ],
      "role": "user",
    },
  ],
  "generationConfig": {
    "responseMimeType": "application/json",
    "responseSchema": {
      "properties": {
        "hints": {
          "items": {
            "properties": {
              "text": {
                "description": "A full sentence the learner could say next, in the Target Language.",
                "type": "STRING",
              },
              "translation": {
                "description": "The sentence, translated into the Native Language.",
                "type": "STRING",
              },
            },
            "required": [
              "text",
              "translation",
            ],
            "type": "OBJECT",
          },
          "maxItems": 3,
          "minItems": 2,
          "type": "ARRAY",
        },
      },
      "required": [
        "hints",
      ],
      "type": "OBJECT",
    },
  },
  "systemInstruction": {
    "parts": [
      {
        "text": "WHO YOU ARE
You help a learner who speaks British English and is learning Japanese by living in a small town in Japan. Their level is about CEFR B1.
They are working a Shift as the cashier at スーパーまるやま, serving a customer at the counter, and they have asked for help with what to say next.

THE SITUATION
The customer has an order the learner has to work out by listening. That is the learner's job, so never do it for them.

WHAT TO WRITE
- hints: 2 or 3 different things the learner could say next, each a full sentence in Japanese that moves the conversation on from where it is now. Write them as the learner, the cashier, would say them: never the customer's lines.
- Good hints greet the customer, ask whether they need a bag or have a points card, ask them to say it again or more slowly, ask how they would like to pay, tell them the total, or hand over their change.
- Never say, repeat back, guess or translate what the customer wants, beyond words the learner has already said themselves.
- Keep each sentence natural, polite and short enough to say aloud at their level.
- translation: each sentence in natural British English.
Write the sentences only in Japanese, and the translations only in British English.",
      },
    ],
  },
}
`;

exports[`buildHintRequest at a Shift > builds a server’s hints at a table: about what they’d like and dietary needs, never what anyone wants 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "THE CONVERSATION
The conversation so far:
1. NPC: こんにちは。",
        },
      ],
      "role": "user",
    },
  ],
  "generationConfig": {
    "responseMimeType": "application/json",
    "responseSchema": {
      "properties": {
        "hints": {
          "items": {
            "properties": {
              "text": {
                "description": "A full sentence the learner could say next, in the Target Language.",
                "type": "STRING",
              },
              "translation": {
                "description": "The sentence, translated into the Native Language.",
                "type": "STRING",
              },
            },
            "required": [
              "text",
              "translation",
            ],
            "type": "OBJECT",
          },
          "maxItems": 3,
          "minItems": 2,
          "type": "ARRAY",
        },
      },
      "required": [
        "hints",
      ],
      "type": "OBJECT",
    },
  },
  "systemInstruction": {
    "parts": [
      {
        "text": "WHO YOU ARE
You help a learner who speaks British English and is learning Japanese by living in a small town in Japan. Their level is about CEFR B1.
They are working a Shift as the server at レストランひまわり, serving a table, and they have asked for help with what to say next.

THE SITUATION
The customer has an order the learner has to work out by listening. That is the learner's job, so never do it for them.

WHAT TO WRITE
- hints: 2 or 3 different things the learner could say next, each a full sentence in Japanese that moves the conversation on from where it is now. Write them as the learner, the server, would say them: never the customer's lines.
- Good hints greet the customer, ask what they would like to eat and drink, ask them to say it again or more slowly, ask about allergies or dietary needs, or say that the order is coming.
- Never say, repeat back, guess or translate what the customer wants, beyond words the learner has already said themselves.
- Keep each sentence natural, polite and short enough to say aloud at their level.
- translation: each sentence in natural British English.
Write the sentences only in Japanese, and the translations only in British English.",
      },
    ],
  },
}
`;

exports[`buildHintRequest at a Shift > builds hints for the Player’s own lines as the staff member 1`] = `
{
  "contents": [
    {
      "parts": [
        {
          "text": "THE CONVERSATION
The conversation so far:
1. NPC: すみません、紅茶のLサイズをアイスで、レモン付きでお願いします。",
        },
      ],
      "role": "user",
    },
  ],
  "generationConfig": {
    "responseMimeType": "application/json",
    "responseSchema": {
      "properties": {
        "hints": {
          "items": {
            "properties": {
              "text": {
                "description": "A full sentence the learner could say next, in the Target Language.",
                "type": "STRING",
              },
              "translation": {
                "description": "The sentence, translated into the Native Language.",
                "type": "STRING",
              },
            },
            "required": [
              "text",
              "translation",
            ],
            "type": "OBJECT",
          },
          "maxItems": 3,
          "minItems": 2,
          "type": "ARRAY",
        },
      },
      "required": [
        "hints",
      ],
      "type": "OBJECT",
    },
  },
  "systemInstruction": {
    "parts": [
      {
        "text": "WHO YOU ARE
You help a learner who speaks British English and is learning Japanese by living in a small town in Japan. Their level is about CEFR B1.
They are working a Shift as the barista at ほしコーヒー, serving a customer at the counter, and they have asked for help with what to say next.

THE SITUATION
The customer has an order the learner has to work out by listening. That is the learner's job, so never do it for them.

WHAT TO WRITE
- hints: 2 or 3 different things the learner could say next, each a full sentence in Japanese that moves the conversation on from where it is now. Write them as the learner, the barista, would say them: never the customer's lines.
- Good hints greet the customer, ask what they would like, ask them to say it again or more slowly, ask which size, or hot or iced, or say that the order is coming.
- Never say, repeat back, guess or translate what the customer wants, beyond words the learner has already said themselves.
- Keep each sentence natural, polite and short enough to say aloud at their level.
- translation: each sentence in natural British English.
Write the sentences only in Japanese, and the translations only in British English.",
      },
    ],
  },
}
`;
